--- a/web/src/locales/fr.json
+++ b/web/src/locales/fr.json
@@ -24,7 +24,8 @@
     "docs": "Documentation de l'API "
   },
   "settings-modal": {
-    "title": "Paramètres"
+    "title": "Paramètres",
+    "flows": "Flux de l'électricité"
   },
   "mobile-main-menu": {
     "map": "Electricity Maps",
@@ -216,8 +217,11 @@
     }
   },
   "time-controller": {
-    "navigate": "Naviguer",
-    "live": "En direct",
+    "72h": "72h",
+    "3mo": "3mo",
+    "12mo": "12mo",
+    "all_months": "Tout",
+    "all_years": "Toutes les années",
     "date-unavailable": {
       "title": "Date indisponible",
       "description": "Redirection vers les données en temps réel"
@@ -332,10 +336,12 @@
     "ofinstalled": "de la capacité installée",
     "utilizing": "utilisant",
     "withcarbonintensity": "avec une intensité carbone de",
+    "layers": "Calques de la carte",
     "showWindLayer": "Voir le calque de vent",
     "hideWindLayer": "Masquer le calque de vent",
     "showSolarLayer": "Voir le calque d’ensoleillement",
     "hideSolarLayer": "Masquer le calque d’ensoleillement",
+    "weatherDisabled": "Les données météo ne sont pas disponibles actuellement",
     "changeTheme": "Changer de thème",
     "noParserInfo": "Pas de données disponibles",
     "temporaryDataOutage": "Données temporairement indisponibles",
@@ -349,7 +355,6 @@
     "ofemissions": "des émissions",
     "zoomIn": "Zoomer",
     "zoomOut": "Dézoomer",
-    "weatherDisabled": "Les données météo ne sont pas disponibles actuellement",
     "aggregateInfo": "Basculer entre une vue détaillée d'une zone et une vue agrégée par pays",
     "netExchange": "Échange net",
     "price": "Prix",
@@ -364,7 +369,10 @@
       "solarLayer": "Calque d'ensoleillement",
       "changeTheme": "Changer le thème",
       "hideSidePanel": "Masquer le panneau latéral",
-      "showSidePanel": "Afficher le panneau latéral"
+      "showSidePanel": "Afficher le panneau latéral",
+      "layers": "Calques de la carte",
+      "zoomIn": "Zoommer",
+      "zoomOut": "Dézoomer"
     }
   },
   "aggregateButtons": {
