Update zone name for the United States in locale files

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -1570,7 +1570,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Contiguous United States",
+      "zoneName": "United States",
       "seoZoneName": "United States of America - U.S."
     },
     "US-AK": {
