--- a/web/src/locales/pl.json
+++ b/web/src/locales/pl.json
@@ -1519,7 +1519,7 @@
       "zoneName": "Uganda"
     },
     "US": {
-      "zoneName": "Contiguous United States"
+      "zoneName": "United States"
     },
     "US-AK": {
       "countryName": "USA",
